--- a/cv-nodejs/.env
+++ b/cv-nodejs/.env
@@ -1,2 +1,7 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://Guason007XD:huanca1962@uagrmdb.mqevenn.mongodb.net/cvtaller
+
+AWS_ACCESS_KEY_ID=AKIA4N7D2SUQDV5TLJN2
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=sw2-1parcial
