--- a/cv-nodejs/package.json
+++ b/cv-nodejs/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.456.0",
+    "@aws-sdk/s3-request-presigner": "^3.456.0",
+    "aws-sdk": "^2.1502.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.1.1"
+    "mongoose": "^7.1.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
